Fix package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binki-series-timer",
+  "name": "binki-jira-quick-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
