Update homepage for publishing.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "binki-jira-quick-search",
+  "homepage": "https://binki.github.io/binki-jira-quick-saerch/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
